<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#C8D9F0"
    tools:context=".AdicionarReceitaActivity">

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/adicionar_nova_receita"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="monospace"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/nameLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerTextView"
        android:layout_marginTop="16dp"
        android:text="@string/insira_o_nome_da_receita"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/ex_torta_de_ma"
        android:textColor="@color/black"
        android:layout_below="@id/nameLabelTextView"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/ingredientsLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtNome"
        android:layout_marginTop="16dp"
        android:text="@string/insira_os_ingredientes"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:id="@+id/edtIngredientes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ingredientsLabelTextView"
        android:layout_marginTop="12dp"
        android:textColorHint="@color/black"
        android:hint="@string/ex_5_ovos_2_x_caras_de_a_car_etc"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        android:minLines="3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/instructionsLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtIngredientes"
        android:layout_marginTop="16dp"
        android:text="@string/insira_as_instru_es"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:id="@+id/edtInstrucoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/instructionsLabelTextView"
        android:layout_marginTop="8dp"
        android:hint="@string/ex_misturar_os_ovos_com_a_farinha_em_uma_vasilha_etc"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:minLines="3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_alignParentEnd="true"/>

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtInstrucoes"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:layout_marginTop="24dp"
        android:background="#A8B5E0"
        android:text="@string/salvar" />

</RelativeLayout>