<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#C8D9F0"
    tools:context=".DetalhesReceitaActivity">

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/detalhes_da_receita"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp"
        android:fontFamily="monospace"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/recipeNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:textColor="@color/black"
        android:text="@string/nome_da_receita"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/edtNomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipeNameTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text=""
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ingredientsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtNomeTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/ingredientes"
        android:fontFamily="monospace"
        android:textSize="18sp"
        android:textStyle="bold"  />

    <TextView
        android:id="@+id/edtIngredientesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ingredientsTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@id/instructionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtIngredientesTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/modo_de_preparo"
        android:fontFamily="monospace"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/edtInstrucoesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/instructionsTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        android:textStyle="bold"  />

</RelativeLayout>